# shift

./: Cargo.toml  Justfile  README.md
app-framework/: Cargo.toml  Justfile  README.md  just_readme.md
app-framework/core/: Cargo.toml
app-framework/core/src/: lib.rs
app-framework/examples/minimal-gl/: Cargo.toml
app-framework/examples/minimal-gl/src/: main.rs
app-framework/gl/: Cargo.toml  build.rs
app-framework/gl/src/: framework.rs  lib.rs
app-framework/monitor-layout-engine/: Cargo.toml
app-framework/monitor-layout-engine/src/: lib.rs
app-framework/src/: lib.rs
app-framework/xkb/: Cargo.toml
app-framework/xkb/src/: lib.rs
shift/: build.rs
shift/src/: app.rs  ids.rs  input.rs  main.rs  renderer.rs
shift/src/auth/: error.rs  mod.rs  token.rs
shift/src/client_layer/: client.rs  client_view.rs  mod.rs
shift/src/comms/: client2server.rs  mod.rs  render2server.rs  server2client.rs  server2render.rs
shift/src/monitor/: mod.rs
shift/src/rendering_layer/: animation.rs  commands.rs  dmabuf_import.rs  egl.rs  fence_runtime.rs  fence_scheduler.rs  mod.rs  ownership.rs  render_core.rs  state.rs  surface_cache.rs
shift/src/server_layer/: mod.rs  server.rs
shift/src/sessions/: mod.rs  pending_sessions.rs  role.rs  session.rs
tab/: v1.md  v2.md
tab-client/examples/: cursor_demo.rs  dvd_rust.rs  penger_client.rs
tab-client/include/: tab_client.h
tab-client/src/: c_bindings.rs  events.rs  gbm_allocator.rs  lib.rs  swapchain.rs
tab-client/src/c_bindings/: connection.rs  event.rs  frame.rs  input.rs  mod.rs  monitor.rs  session.rs
tab-protocol/: Cargo.toml
tab-protocol/src/: lib.rs  message_frame.rs  message_header.rs
tab-server/src/: client.rs  connection.rs  lib.rs  monitor.rs  server.rs
test/scripts/: play-media.sh
