[package]
name = "tab-app-framework-example-minimal-gl"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
tab-app-framework = { path = "../.." }
tab-protocol = { path = "../../../tab-protocol" }
glow = "0.14"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
